--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>memcmp: Coming Soon</title>
+<title>memcmp Ltd.</title>
 <link rel="stylesheet" href="style.css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -16,8 +16,9 @@
 <body>
 <div id="coming-soon">
 <h1>memcmp</h1>
-<p>Coming soon, as seen on Omicron Persei 8.</p>
+<p>As seen on Omicron Persei 8.</p>
 </div>
 <div id="arecibo">&nbsp;</div>
+<footer>© 2016 memcmp Limited. All rights reserved. UK Co. No. 10162232</footer>
 </body>
 </html>
