--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>memcmp Ltd.</title>
-<link rel="stylesheet" href="style.css">
-<script>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,9 +16,9 @@
 <body>
 <div id="coming-soon">
 <h1>memcmp</h1>
-<p>As seen on Omicron Persei 8.</p>
+<p>As seen on Omicron Persei 8</p>
 </div>
-<div id="arecibo">&nbsp;</div>
+<div id="arecibo"><a href="http://en.wikipedia.org/wiki/Arecibo_message">&nbsp;</a></div>
 <footer>© 2016 memcmp Limited. All rights reserved. UK Co. No. 10162232</footer>
 </body>
 </html>
