--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name=viewport content="width=device-width, initial-scale=1">
 <title>memcmp Ltd.</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script type="text/javascript">
@@ -17,8 +18,8 @@
 <div id="coming-soon">
 <h1>memcmp</h1>
 <p>As seen on Omicron Persei 8</p>
-</div>
 <div id="arecibo"><a href="http://en.wikipedia.org/wiki/Arecibo_message">&nbsp;</a></div>
-<footer>© 2016 memcmp Limited. All rights reserved. UK Co. No. 10162232</footer>
+</div>
+<footer>© 2016 memcmp Ltd. All rights reserved. UK Co. No. 10162232</footer>
 </body>
 </html>
