--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <h1>memcmp</h1>
 <p>As seen on Omicron Persei 8</p>
 <div id="arecibo"><a href="http://en.wikipedia.org/wiki/Arecibo_message">&nbsp;</a></div>
+<br/>
+<div id="logo"></div>
 </div>
-<footer>© 2016 memcmp Ltd. All rights reserved. UK Co. No. 10162232</footer>
+<footer>© 2016-2017 memcmp Ltd. All rights reserved. UK Co. No. 10162232</footer>
 </body>
 </html>
