--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
-<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html lang="en"
+      xml:lang="en"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta content="text/html; charset=utf-8"
+        http-equiv="Content-Type" />
+  <meta content="width=device-width, initial-scale=1"
+        name="viewport" />
   <title>memcmp Ltd.</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="style.css"
+        rel="stylesheet"
+        type="text/css" />
   <script type="text/javascript">
+  //<![CDATA[
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-77356416-1', 'auto');
     ga('send', 'pageview');
+  //]]>
   </script>
 </head>
 <body>
   <div id="container">
     <div id="body">
-      <div id="logo" class='border'></div>
+      <div class='border'
+           id="logo"></div>
       <p>As seen on Omicron Persei 8</p>
-      <div id="arecibo" class='border'>
-        <a href="http://en.wikipedia.org/wiki/Arecibo_message"><img src='arecibo.svg' height='270px' width='90px' /></a>
+      <div class='border'
+           id="arecibo">
+        <a href="http://en.wikipedia.org/wiki/Arecibo_message"><img height='270px'
+             src='arecibo.svg'
+             width='90px' /></a>
       </div>
     </div>
     <div id="footer">
-      All rights reserved. UK Co. No. 10162232<br/>
-      © 2016-2018 memcmp Ltd.
+      UK Co. No. 10162232 / EE Co. No. 14634984<br />
+      All rights reserved. © 2016-2019 memcmp
     </div>
   </div>
 </body>
