--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
     </div>
     <div id="footer">
-      UK Co. No. 10162232 / EE Co. No. 14634984<br />
-      All rights reserved. © 2016-2019 memcmp
+      All rights reserved.<br />
+      © memcmp 2016-2021
     </div>
   </div>
 </body>
